@@ -24,6 +24,6 @@
 #include "common.h"
 #include "db.h"
 
-int	process_event(DB_EVENT *event);
+int	process_event(DB_EVENT *event, int force_actions);
 
 #endif
